--- a/app/assets/stylesheets/components/_tags-bar.scss
+++ b/app/assets/stylesheets/components/_tags-bar.scss
@@ -96,24 +96,28 @@
   background-color: $blue;
   z-index: 20;
 }
+
 .photo-icon-2 {
   background-image: image-url("photo2.png");
   background-size: 40px;
   background-color: $yellow;
   z-index: 20;
 }
+
 .graph-icon-2 {
   background-image: image-url("graph2.png");
   background-size: 40px;
   background-color: $blue-grey;
   z-index: 20;
 }
+
 .dev-icon-2 {
   background-image: image-url("dev2.png");
   background-size: 40px;
   background-color: $purple;
   z-index: 20;
 }
+
 .env-icon-2 {
   background-image: image-url("env2.png");
   background-size: 40px;
@@ -131,12 +135,16 @@
 }
 
 .tag-title {
+  font-family: $headers-font;
+  font-size: 18px;
+  text-transform: uppercase;
+  color: #666666;
   padding-left: 10px;
   display: none;
   font-size: 16px;
   opacity: 0%;
   margin-top: 3px;
-  transition: all 1s linear;
+  // transition: opacity 1s linear;
 }
 
 @media (min-width: 768px) {
@@ -145,9 +153,8 @@
   }
 }
 
-
 @media (min-width: 768px) {
   .icon:hover + .tag-title {
-    opacity: 60%;
+    opacity: 100%;
   }
 }
