--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -36,6 +36,8 @@
   font-size: 16px;
   margin-block-start: 0em;
   margin-block-end: 0em;
+  margin-left: 16px;
+  margin-right: 16px;
   padding-bottom: 22px;
   text-decoration: none;
   color: black;
