--- a/app/assets/stylesheets/components/_tagsline.scss
+++ b/app/assets/stylesheets/components/_tagsline.scss
@@ -9,8 +9,7 @@
   display: inline-block;
   padding-left: 14px;
   padding-right: 14px;
-  padding-top: 9px;
-  padding-bottom: 3px;
+  padding-top: 8px;
   margin-top: 0px;
   margin-bottom: 13px;
   height: 20px;
@@ -24,7 +23,8 @@
   display: inline-block;
   padding-left: 10px;
   padding-right: 10px;
-  padding-top: 10px;
+  padding-top: 8px;
+  line-height: 1.2;
   margin-top: 0px;
   margin-bottom: 13px;
   height: 20px;
