--- a/app/views/shared/_tagsbar.html.erb
+++ b/app/views/shared/_tagsbar.html.erb
@@ -15,11 +15,11 @@
       <div class="tags-titles">
         <div class="flex">
           <% if params[:tag].present? && params[:tag] == "Fabrication" %>
-            <%= link_to tagged_path, :class => "icon fab-icon", data: {tags_target: "fabTag"} do %><% end %>
+            <%= link_to tagged_path, :class => "icon icon-top fab-icon", data: {tags_target: "fabTag"} do %><% end %>
           <% else %>
-            <%= link_to tagged_path(tag: "Fabrication"), :class => "icon fab-icon", data: {tags_target: "fabTag"} do %><% end %>
+            <%= link_to tagged_path(tag: "Fabrication"), :class => "icon icon-top fab-icon", data: {tags_target: "fabTag"} do %><% end %>
           <% end %>
-          <div class="tag-title">Fabrication</div>
+          <div class="tag-title tag-title-top">Fabrication</div>
         </div>
         <div class="flex">
           <% if params[:tag].present? && params[:tag] == "Photographie" %>
@@ -47,11 +47,11 @@
         </div>
         <div class="flex">
           <% if params[:tag].present? && params[:tag] == "Environnement" %>
-            <%= link_to tagged_path, :class => "icon env-icon", data: {tags_target: "envTag"} do %><% end %>
+            <%= link_to tagged_path, :class => "icon icon-bottom env-icon", data: {tags_target: "envTag"} do %><% end %>
           <% else %>
-            <%= link_to tagged_path(tag: "Environnement"), :class => "icon env-icon ", data: {tags_target: "envTag"} do %><% end %>
+            <%= link_to tagged_path(tag: "Environnement"), :class => "icon icon-bottom env-icon ", data: {tags_target: "envTag"} do %><% end %>
           <% end %>
-          <div class="tag-title">Environnement</div>
+          <div class="tag-title tag-title-bottom">Environnement</div>
         </div>
       </div>
     </div>
