text link overflow and traget blank

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -11,8 +11,8 @@
     <% end %>
     <% if @post.source.present? %>
       <h3>Source</h3>
-      <%= link_to @post.source do %>
-        <p><%= @post.source %></p>
+      <%= link_to @post.source, target: "_blank" do %>
+        <p class="source"><%= @post.source %></p>
       <% end %>
     <% end %>
   </div>
