--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -14,6 +14,12 @@
   }
 }
 
+@media (max-height: 400px) {
+  .container {
+    padding-left: 54px;
+  }
+}
+
 // @media (min-width: 992px) {
 //   .container {
 //     width: auto;
