--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -3,7 +3,7 @@
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
-  line-height: 27px;
+  line-height: 14px;
   letter-spacing: 0.12em;
   padding-top: 8px;
   padding-bottom: 5px;
@@ -36,4 +36,16 @@
   padding-top: 3px !important;
   display: block;
   margin-right: 20px;
+}
+
+
+.button-mail {
+  background-image: image-url("mail.png");
+  background-size: 20px;
+  background-position: center;
+  background-repeat: no-repeat;
+  display: inline-block;
+  margin-top: 0px;
+  width: 18px;
+  height: 14px;
 }
