--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -3,11 +3,11 @@
     <h1 class="header text-align-center">Quentin Orhant</h1>
     <p class="p-header text-align-center">Maker et développeur freelance</p>
   <% end %>
-  <div class="buttons-container">
+  <div class="buttons-container flex">
     <% if current_user %>
       <%= link_to "Log out", destroy_user_session_path, class: "button", data: {turbo_method: :delete} %>
     <% end %>
-    <%= link_to "Contact", contact_path, class: "button" %>
+    <%= link_to "Infos", contact_path, class: "button" %>
+    <%= link_to "", contact_path, class: "button button-mail" %>
   </div>
-  <%= render "shared/tagsline" %>
 </div>
