--- a/app/views/shared/_tagsline.erb
+++ b/app/views/shared/_tagsline.erb
@@ -16,8 +16,8 @@
       <%= link_to tagged_path(tag: "Environnement") do %><h3 class="tag-line env-tag">Environnement</h3><% end %>
     <% end %>
     <div class="spacer-30"></div>
-  <% end %>
-  <% if @post.present? %>
+
+  <% elsif @post.present? %>
     <% @post.tag_list.each do |tag| %>
       <% if tag == "Fabrication" %>
         <%= link_to tagged_path(tag: "Fabrication") do %><h3 class="multi-tag-line fab-tag">Fabrication</h3><% end %>
@@ -36,5 +36,13 @@
       <% end %>
     <% end %>
     <div class="spacer-30"></div>
+  <% else %>
+    <%= link_to tagged_path(tag: "Fabrication") do %><h3 class="multi-tag-line fab-tag">Fabrication</h3><% end %>
+    <%= link_to tagged_path(tag: "Photographie") do %><h3 class="multi-tag-line photo-tag">Photographie</h3><% end %>
+    <%= link_to tagged_path(tag: "Graphisme") do %><h3 class="multi-tag-line graph-tag">Graphisme</h3><% end %>
+    <%= link_to tagged_path(tag: "Développement") do %><h3 class="multi-tag-line dev-tag">Développement</h3><% end %>
+    <%= link_to tagged_path(tag: "Environnement") do %><h3 class="multi-tag-line env-tag">Environnement</h3><% end %>
+  <div class="spacer-30"></div>
   <% end %>
+
 </div>
