--- a/app/assets/stylesheets/components/_general.scss
+++ b/app/assets/stylesheets/components/_general.scss
@@ -127,3 +127,9 @@ label {
 .source {
   word-break: break-all;
 }
+
+.message {
+  max-width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+}
