--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,6 +8,6 @@
       <%= link_to "Log out", destroy_user_session_path, class: "button", data: {turbo_method: :delete} %>
     <% end %>
     <%= link_to "Infos", contact_path, class: "button" %>
-    <%= link_to "", contact_path, class: "button button-mail" %>
+    <%= link_to "", message_path, class: "button button-mail" %>
   </div>
 </div>
