--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,10 +1,48 @@
-<div data-controller="slider">
-  <div data-slider-target="slide">
-    <div>Slide 1</div>
-    <div>Slide 2</div>
-    <div>Slide 3</div>
-    <div>Slide 4</div>
-    <div>Slide 5</div>
-    <div>Slide 6</div>
+<div class="container-8">
+  <div class="g-1-5">
+    <%= image_tag "avatar.png", class: "avatar" %>
+    <br><br>
+    <h2 class="red" >CONTACTS</h2>
+    <p>06 76 54 43 11</p>
+    <p>contact@quentino.io</p>
+    <div class="spacer"></div>
+    <h2 class="red" >Formations</h2>
+    <h3>BOOTCAMP Développeur WEB</h3>
+    <p>Le Wagon Rennes</p>
+    <p class="p-highlight">2022</p>
+    <br>
+    <h3>Licence géo & aménagement</h3>
+    <p>Université Rennes 2</p>
+    <p class="p-highlight">2011</p>
+    <br>
+    <h3>Licence énergie environnement</h3>
+    <p>Université de Clermont-Ferrand</p>
+    <p class="p-highlight">2010</p>
+    <div class="spacer"></div>
+    <h2 class="red" >Compétences</h2>
+    <p class="list">Développement web</p>
+    <p class="list">Conception d'objets</p>
+    <p class="list">Design graphique</p>
+    <p class="list">Gestion de projet</p>
+    <p class="list">Médiation</p>
+  </div>
+  <div class="g-5-9">
+    <div class="spacer"></div>
+    <h2 class="red" >Expériences</h2>
+    <h3>Coordinateur / Fabmanager</h3>
+    <p>Création et coordination de L'Atelier Commun. Tiers-lieu associatif dédié à l'écologie et au réemploi.</p>
+    <p class="p-highlight">2019 - Sept 2022</p>
+    <br>
+    <h3>Maker / développeur freelance</h3>
+    <p>Prototypage, développement web, créations artistique, médiation et ateliers.</p>
+    <p class="p-highlight">2013 - Aujourd’hui</p>
+    <br>
+    <h3>Animateur / médiateur scientifique</h3>
+    <p>Animation et accompagnement des groupes et du grand public à L’Espace des sciences de Rennes.</p>
+    <p class="p-highlight">2011 - 2013</p>
+    <div class="spacer"></div>
+    <h2 class="red" >Langages et logiciels</h2>
+    <%= image_tag "icons.png", class: "icons-logiciels"%>
+    <div class="spacer-last"></div>
   </div>
 </div>
