--- a/app/assets/stylesheets/components/_general.scss
+++ b/app/assets/stylesheets/components/_general.scss
@@ -133,3 +133,11 @@ label {
   margin-left: auto;
   margin-right: auto;
 }
+
+.next-img {
+  margin-left: 10px;
+}
+
+.prev-img {
+  margin-right: 10px;
+}
