--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container-8">
+<div class="container-8 container-contact">
   <div class="g-1-5">
     <%= image_tag "avatar.png", class: "avatar" %>
     <br><br>
