--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,10 +1,10 @@
 <div class="container-8">
   <div class="g-1-5 show_pics">
     <% @post.photos.each do |photo| %>
-      <%= cl_image_tag photo.key, width: "100%", class: "img-show" %>
+      <%= cl_image_tag photo.key, class: "img-show", width: 850, quality: :auto, fetch_format: :auto, crop: :fill %>
     <% end %>
   </div>
-  <div class="g-5-9 show-fix">
+  <div class="g-6-9 show-fix">
     <h1><%= @post.title %></h1>
     <% if @post.description.present? %>
       <p><%= simple_format @post.description %></p>
