--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -37,6 +37,7 @@
 .card-img {
   object-fit: cover;
   width: 100%;
+  height: 100%;
   aspect-ratio: 1 / 1;
   border-radius: 5px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
