--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container-8">
   <div class="g-1-5 show_pics">
     <% @post.photos.each do |photo| %>
-      <%= cl_image_tag photo.key, class: "img-show", loading: "lazy", width: 850, quality: :auto, fetch_format: :auto, crop: :fill %>
+      <%= cl_image_tag photo.key, class: "img-show",  width: 860, quality: :auto, fetch_format: :auto, crop: :fill %>
     <% end %>
   </div>
   <div class="g-6-9 show-fix">
