--- a/app/assets/stylesheets/components/_next-prev.scss
+++ b/app/assets/stylesheets/components/_next-prev.scss
@@ -4,6 +4,7 @@
 }
 
 .next {
+  padding-left: 7px;
   display: flex;
   align-items: center;
   transition: 0.5s ease;
@@ -18,6 +19,7 @@
 }
 
 .prev {
+  padding-right: 7px;
   display: flex;
   align-items: center;
   transition: 0.5s ease;
