--- a/app/assets/stylesheets/components/_next-prev.scss
+++ b/app/assets/stylesheets/components/_next-prev.scss
@@ -26,12 +26,14 @@
 }
 
 .next-title {
+  font-size: 13px;
   padding-bottom: 17px;
   text-align: right;
   color: black;
 }
 
 .prev-title {
+  font-size: 13px;
   padding-bottom: 17px;
   text-align: left;
   color: black;
